<resources>
    <string name="app_name">C19Tracker</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_telepon">No Handphone</string>
    <string name="password">Password</string>
    <string name="nik">NIK</string>
    <string name="login_skrng">Login</string>
    <string name="login_button">Login</string>
    <string name="kirim_button">Register</string>
    <string name="title_activity_beranda">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_tips">Tips</string>
    <string name="title_lokasi">Lokasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>