<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.proyek.c19tracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_tips"
            app:destination="@id/navigation_tips" />
    </fragment>

    <fragment
        android:id="@+id/navigation_tips"
        android:name="com.proyek.c19tracker.ui.tips.TipsFragment"
        android:label="@string/title_tips"
        tools:layout="@layout/fragment_tips" >
        <action
            android:id="@+id/action_navigation_tips_to_navigation_lokasi"
            app:destination="@id/navigation_lokasi" />
    </fragment>

    <fragment
        android:id="@+id/navigation_lokasi"
        android:name="com.proyek.c19tracker.ui.lokasi.LokasiFragment"
        android:label="@string/title_lokasi"
        tools:layout="@layout/fragment_lokasi" />
</navigation>